<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    android:paddingTop="28dp"
    android:paddingLeft="35dp"
    android:paddingRight="35dp"
    android:paddingBottom="35dp"
    android:gravity="center"
    tools:context=".Main2Activity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="40sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_continue"
        android:textColor="@color/grey"
        android:textSize="24sp"/>


    <EditText
        android:id="@+id/sign_up_name"
        android:hint="@string/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/ic_person_pin"
        android:drawablePadding="10dp"
        android:paddingBottom="20dp"/>

    <EditText
        android:id="@+id/sign_up_phone"
        android:hint="@string/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_call"
        android:drawablePadding="10dp"
        android:paddingBottom="20dp"/>

    <EditText
        android:id="@+id/sign_up_id"
        android:hint="@string/login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_person_outline"
        android:drawablePadding="10dp"
        android:paddingBottom="20dp"/>

    <EditText
        android:id="@+id/sign_up_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_lock_outline"
        android:drawablePadding="10dp"
        android:paddingBottom="20dp"/>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createAccount"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/round_button"
        android:text="@string/sign_up" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/already_have_an_account"/>

            <TextView
                android:id="@+id/tv_login_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:onClick="login_page"
                android:text="@string/login"/>

        </LinearLayout>

</LinearLayout>