<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    android:gravity="center"
    android:background="@drawable/bg_color"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="50sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/sign_in_to_continue"
            android:textSize="25sp"/>


        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:drawableLeft="@drawable/ic_person_outline"
            android:drawablePadding="10dp"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:drawablePadding="10dp"
            android:paddingBottom="20dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick_login"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:background="@drawable/round_button"
            android:text="@string/login"
            android:textSize="18sp" />


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/new_here"/>

        <TextView
            android:id="@+id/sign_up_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:onClick="onClick_SignUp"
            android:text="@string/sign_up"/>

        </LinearLayout>

</LinearLayout>